src/components/header/header.module.scss
@import '../../styles/variables.module.scss';

.header {
  position: relative;
  margin-bottom: 2.5 * $space-xxl;

  @media (max-width: $max-md) {
    margin-bottom: $space-xxxl;
  }
}

.headerLargeTitle {
  position: absolute;
  bottom: -20px;
  font-size: $heading-1;
  line-height: $lh-heading-1;
  font-weight: 600;
  background-image: linear-gradient(76.31deg, #c3c4c3 2.01%, #f3f3f3 99.02%);
  background-clip: text;
  opacity: 0.1;

  @media (max-width: $max-lg) {
    bottom: -10px;
    font-size: $heading-2;
    line-height: $lh-heading-2;
  }

  @media (max-width: $max-md) {
    font-size: 80px;
    line-height: 101px;
  }

  @media (max-width: $max-sm) {
    bottom: -5px;
    font-size: $heading-3;
    line-height: $lh-heading-3;
  }
}

.headerTitle {
  font-size: $heading-4;
  line-height: $lh-heading-4;
  font-weight: 600;

  @media (max-width: $max-sm) {
    font-size: $heading-5;
    line-height: $lh-heading-5;
  }
}

.headerSubtitle {
  color: $tertiary-color;
  line-height: 21px;
  text-transform: uppercase;
}

